crates/bevy_ecs/compile_fail/tests/ui/system_state_iter_lifetime_safety.stderr
error[E0502]: cannot borrow `*world` as mutable because it is also borrowed as immutable
  --> tests/ui/system_state_iter_lifetime_safety.rs:LL:CC
   |
LL |         let q1 = self.state_r.get(&world);
   |                                   ------ immutable borrow occurs here
...
LL |         let mut q2 = self.state_w.get_mut(world);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
...
LL |         println!("{}", a1.0);
   |                        ---- immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
